<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightGrey"
    tools:context=".presenter.details.FlightDetailsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="135dp"
        android:background="@drawable/blue_bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/image_world_half"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:src="@drawable/world_half"/>

        <ImageView
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/icon_back"
            android:src="@drawable/back"
            android:layout_marginTop="48dp"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="92dp"
            android:text="@string/detalhes_do_voo"
            android:textColor="@color/lightGrey"
            android:textSize="28sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/btnBack"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/btnBack" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="580dp"
        android:background="@drawable/bg_white"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <TextView
            android:id="@+id/text_airplane_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp"
            tools:text="Boeing 737"
            android:textSize="32sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/text_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="@+id/text_airplane_name"
            app:layout_constraintStart_toStartOf="@+id/text_airplane_name"
            app:layout_constraintTop_toBottomOf="@+id/text_airplane_name"
            tools:text="Status: CONCLUIDO" />

        <TextView
            android:id="@+id/text_completion_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/text_status"
            app:layout_constraintStart_toStartOf="@+id/text_status"
            app:layout_constraintTop_toBottomOf="@+id/text_status"
            tools:text="NO_HORARIO" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/image_calendar"
            android:src="@drawable/calendar_ic"
            app:layout_constraintEnd_toStartOf="@+id/text_start_date"
            app:layout_constraintStart_toStartOf="@+id/text_departure_airport"
            app:layout_constraintTop_toBottomOf="@+id/text_departure_airport" />

        <TextView
            android:id="@+id/text_start_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/imageView2"
            app:layout_constraintEnd_toEndOf="@+id/text_departure_airport"
            app:layout_constraintStart_toStartOf="@+id/text_departure_airport"
            app:layout_constraintTop_toTopOf="@+id/imageView2"
            tools:text="Data de início: 2024-08-01" />

        <TextView
            android:id="@+id/text_departure_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginTop="4dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/text_start_date"
            app:layout_constraintStart_toStartOf="@+id/text_start_date"
            app:layout_constraintTop_toBottomOf="@+id/text_start_date"
            tools:text="Hora de partida: 10:00" />

        <TextView
            android:id="@+id/text_departure_airport"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_completion_status"
            tools:text="JFK - John F. Kennedy International Airport" />


        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:contentDescription="@string/line_airple_blue"
            android:src="@drawable/line_airple_blue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_departure_time" />

        <TextView
            android:id="@+id/text_arrival_airport"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginTop="32dp"
            app:layout_constraintEnd_toEndOf="@+id/text_departure_airport"
            app:layout_constraintStart_toStartOf="@+id/text_departure_airport"
            app:layout_constraintTop_toBottomOf="@+id/imageView3"
            tools:text="LAX - Los Angeles International Airport" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/image_calendar"
            android:src="@drawable/calendar_ic"
            app:layout_constraintEnd_toStartOf="@+id/text_end_date"
            app:layout_constraintStart_toStartOf="@+id/imageView2"
            app:layout_constraintTop_toBottomOf="@+id/text_arrival_airport" />

        <TextView
            android:id="@+id/text_end_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/imageView5"
            app:layout_constraintEnd_toEndOf="@+id/text_arrival_airport"
            app:layout_constraintStart_toStartOf="@+id/text_arrival_airport"
            app:layout_constraintTop_toTopOf="@+id/imageView5"
            tools:text="Data Final: 2024-08-01" />

        <TextView
            android:id="@+id/text_arrival_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textStyle="bold"

            app:layout_constraintEnd_toEndOf="@+id/text_end_date"
            app:layout_constraintStart_toStartOf="@+id/text_end_date"
            app:layout_constraintTop_toBottomOf="@+id/text_end_date"
            tools:text="Hora daa chegada: 14:00" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/image_barcode"
            android:src="@drawable/barcode"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_arrival_time" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>